fix social links gap

--- a/src/sass/60_components/_components.team-card.scss
+++ b/src/sass/60_components/_components.team-card.scss
@@ -182,7 +182,7 @@
       .c-team-card__social-links {
         display: flex;
         justify-content: flex-start;
-        gap: 1rem;
+        gap: 0.75rem;
       }
     }
 
